# face-recognition-ncnn

./: CMakeLists.txt  README.md  face_ncnn.cpp
lib/cmake/ncnn/: ncnn.cmake  ncnnConfig.cmake
models/: mbv2facenet.param  retinaface.param
src/: anchor_creator.cpp  anchor_creator.h  config.cpp  config.h  utils.cpp  utils.h
toolchains/: jetson.toolchain.cmake  linux-arm64.toolchain.cmake
